== 2026-02-10 18:57 == Fix: Game category not updating mid-stream ==

- Game category, viewer count, and broadcast ID now refresh every 5 min for all online channels
- Previously only refreshed if game name was empty — mid-stream category changes were never picked up
- Affects both Terminal UI and Web Interface

== 2026-02-10 18:57 == Fix: Web UI channel add not working ==

- Add Channel via web interface failed silently (errors only logged to console)
- Added loading state on Add button while Twitch API resolves the channel
- Added inline error display in Add Channel modal (red banner with error message)
- Added toast notification system (green = success, red = error, auto-dismiss 4s)
- All actions (add, remove, priority toggle) now show visible feedback
- Fixed silent catch blocks in remove channel and priority toggle

== 2026-02-09 22:38 == Feature: Docker Support ==

- Added Dockerfile with multi-stage build (golang:1.22-alpine -> alpine:3.19)
- Added docker-compose.yml for easy deployment
- Added .dockerignore to minimize build context
- Config mounted as volume at /app/config/config.json
- Web UI exposed on port 8080
- Minimal image size (~15MB) with stripped binary

== 2026-02-08 20:01 == Feature: IRC Viewer Presence ==

- Added Twitch IRC connection for viewer presence in channels
- Connects to irc.chat.twitch.tv:6697 (TLS) with OAuth authentication
- Auto-joins all configured channels to register as active viewer
- Benefits:
  - Counts as "active" viewer (not just passive Spade heartbeat)
  - Some channels give bonus points for chat presence
  - Better raid participation detection
- Config: irc_enabled (bool, default: true)
- Auto-reconnect with exponential backoff on disconnect
- PING/PONG keepalive every 4 minutes
- Dynamic JOIN/PART when adding/removing channels at runtime
- Files added: internal/twitch/irc.go
- Files modified: internal/config/config.go, internal/farmer/farmer.go
