@@ -1,3 +1,9 @@
+== 2026-02-10 19:03 == Feature: Version number in Web UI ==
+
+- Added version display in web UI header (e.g. "TwitchPoint Farmer v1.1.2")
+- Version served via /api/stats endpoint
+- Single constant in cmd/twitchpoint/main.go — update once per release
+
 == 2026-02-10 18:57 == Fix: Game category not updating mid-stream ==
 
 - Game category, viewer count, and broadcast ID now refresh every 5 min for all online channels
